--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body {
     width: 100px;
     height: 100px;
     cursor: pointer;
+    clip-path: inset(10px, 20px, 30px, 40px);
 }
 .properties {
     background-color: #fff;
