--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ ul {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 100px;
+
 }
 
 .main-container {
@@ -18,6 +19,7 @@ ul {
 
 .search-bar {
     width: 240px;
+    margin-left: 200px;
 }
 .shadow-text {
     text-shadow: 2px 2px gray;
@@ -173,4 +175,40 @@ footer {
     box-shadow: inset 0px -6px 0px 0px #1e1e1e;
     margin-bottom: 80px;
 
+}
+
+#myInput {
+    background-image: url('/css/searchicon.png');
+    background-position: 10px 12px;
+    background-repeat: no-repeat;
+    width: 60%;
+    font-size: 16px;
+    padding: 12px 20px 12px 40px;
+    border: 1px solid #ddd;
+    margin-bottom: 12px;
+}
+
+#myUL {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+#myUL li a {
+    border: 1px solid #ddd;
+    margin-top: -1px;
+    background-color: #f6f6f6;
+    padding: 12px;
+    text-decoration: none;
+    font-size: 18px;
+    color: black;
+    display: block;
+}
+
+#myUL li a:hover:not(.header){
+    background-color: #eee;
+}
+
+#myUL {
+    display: none;
 }
